--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -2,16 +2,14 @@
   max-width: 1366px;
   width: 100%;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 0 100px;
   box-sizing: border-box;
 
-  @media (min-width: $table) {
+  @media (max-width: $desktop) {
     padding: 0 45px;
   }
-  // @media (min-width: $desktop) {
-  //   padding: 0 50px;
-  // }
-  @media (min-width: $desktop) {
-    padding: 0 100px;
+
+  @media (max-width: $table) {
+    padding: 0 15px;
   }
 }
