--- a/source/sass/blocks/cruise.scss
+++ b/source/sass/blocks/cruise.scss
@@ -4,16 +4,16 @@
   flex-direction: column;
   justify-content: space-between;
 
-  min-height: 365px;
+  height: 382px;
 
   box-sizing: border-box;
 
-  @media (min-width: $table) {
+  @media (max-width: $desktop) {
     height: 376px;
   }
 
-  @media (min-width: $desktop) {
-    height: 382px;
+  @media (max-width: $table) {
+    min-height: 365px;
   }
 
   &:focus,
@@ -24,11 +24,11 @@
       padding: 0 25px;
       transition: opacity 1s;
 
-      @media (min-width: $table) {
+      @media (max-width: $desktop) {
         padding: 0 33px;
       }
 
-      @media (min-width: $desktop) {
+      @media (max-width: $table) {
         padding: 0 25px;
       }
     }
@@ -52,12 +52,12 @@
       overflow: hidden;
       max-height: 60px;
 
-      @media (min-width: $table) {
+      @media (max-width: $desktop) {
         padding: 28px 33px 12px;
         margin-bottom: 7px;
       }
 
-      @media (min-width: $desktop) {
+      @media (max-width: $table) {
         padding: 28px 25px 12px;
       }
     }
@@ -85,49 +85,38 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    height: 365px;
-    min-height: 100%;
 
-    @media (min-width: $table) {
+    min-height: 100%;
+    height: 382px;
+
+    @media (max-width: $desktop) {
       height: 376px;
     }
 
-    @media (min-width: $desktop) {
-      height: 382px;
+    @media (max-width: $table) {
+      height: 365px;
     }
 
     & h3 {
       margin: 0;
-      padding: 16px 26px;
+
+      padding: 23px 30px;
       font-weight: 500;
       font-size: 18px;
       line-height: 150%;
       color: $default-color;
       box-sizing: border-box;
 
-      @media (min-width: $table) {
-        padding: 23px 30px;
+      @media (max-width: $table) {
+        padding: 16px 26px;
       }
-    }
-  }
-
-  &__title {
-    margin: 0;
-    padding: 16px 26px;
-    font-weight: 500;
-    font-size: 18px;
-    line-height: 150%;
-    color: $default-color;
-    box-sizing: border-box;
-
-    @media (min-width: $table) {
-      padding: 23px 30px;
     }
   }
 
   &__link {
     display: block;
-    margin-top: 20px;
+
+    margin-top: 23px;
     padding: 10px;
     font-weight: 600;
     font-size: 14px;
@@ -144,18 +133,18 @@
       opacity: 0.5;
     }
 
-    @media (min-width: $desktop) {
-      margin-top: 23px;
+    @media (max-width: $desktop) {
+      margin-top: 20px;
     }
   }
 
   &__item {
-    margin-bottom: 7px;
+    margin-bottom: 10px;
     font-size: 14px;
     line-height: 140%;
 
-    @media (min-width: $table) {
-      margin-bottom: 10px;
+    @media (max-width: $table) {
+      margin-bottom: 7px;
     }
   }
 
