--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -2,21 +2,22 @@
   position: relative;
   width: 100%;
   height: 100%;
-  min-height: 306px;
 
-  background-image: url("../img/contacts/map-mob.jpg");
+  min-height: 309px;
+  background-image: url("../img/contacts/map.jpg");
   background-size: cover;
   background-repeat: no-repeat;
 
   overflow: hidden;
 
-  @media (min-width: $table) {
+  @media (max-width: $desktop) {
     min-height: 336px;
     background-image: url("../img/contacts/map-table.jpg");
   }
 
-  @media (min-width: $desktop) {
-    min-height: 309px;
-    background-image: url("../img/contacts/map.jpg");
+  @media (max-width: $table) {
+    min-height: 306px;
+
+    background-image: url("../img/contacts/map-mob.jpg");
   }
 }
