--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,54 +1,56 @@
 .page-footer {
-
-  padding: 40px 0;
+  padding: 50px 0;
   background-color: $primary-color;
 
-  @media (min-width: $table) {
+  @media (max-width: $desktop) {
     padding: 46px 0;
   }
 
-  @media (min-width: $desktop) {
-    padding: 50px 0;
+  @media (max-width: $table) {
+    padding: 40px 0;
   }
 
   &__container {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    justify-content: flex-start;
 
-    @media (min-width: $table) {
-      align-items: center;
-      flex-direction: row;
-      justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+    @media (max-width: $table) {
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: flex-start;
     }
   }
 
   &__logo {
-    margin-right: 25px;
+    margin-right: 40px;
 
-    @media (min-width: $desktop) {
-      margin-right: 15px;
+    @media (max-width: 1200px) {
+      margin-right: 25px;
     }
 
-    @media (min-width: 1200px) {
-      margin-right: 40px;
+    @media (max-width: $desktop) {
+      margin-right: 15px;
     }
   }
 
   &__nav {
-    margin-top: 11px;
-    margin-bottom: 8px;
+    margin: 0;
 
-    @media (min-width: $table) {
-      margin-bottom: 0;
-      margin-top: 0;
+    @media (max-width: $table) {
+      margin-top: 11px;
+      margin-bottom: 8px;
     }
   }
 
   &__social {
-    @media (min-width: $table) {
-      margin-left: auto;
+    margin-left: auto;
+
+    @media (max-width: $table) {
+      margin-left: 0;
     }
   }
 }
