--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -2,15 +2,15 @@
   position: relative;
   width: 100%;
   max-width: 100%;
-  padding: 20px 0;
+  padding: 33px 0;
   background-color: transparent;
 
-  @media (min-width: $table) {
+  @media (max-width: $desktop) {
     padding: 27px 0;
   }
 
-  @media (min-width: $desktop) {
-    padding: 33px 0;
+  @media (max-width: $table) {
+    padding: 20px 0;
   }
 
   &--mob {
@@ -24,13 +24,14 @@
   &__container {
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    align-items: flex-start;
 
-    @media (min-width: $table) {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+    @media (max-width: $table) {
+      flex-direction: column;
+      align-items: flex-start;
     }
   }
 }
