--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -52,18 +52,14 @@
     width: 100%;
     font-size: 14px;
     line-height: 150%;
-    border: 1px solid transparent;
+    border: 2px solid transparent;
     border-radius: 0;
     background-color: #f9fbfd;
     box-sizing: border-box;
 
-    &:focus {
-      opacity: 1;
-      border: 1px solid #bce0fa;
-    }
-
+    &:focus,
     &:hover {
-      opacity: 0.9;
+      border: 2px solid #bce0fa;
     }
   }
 
@@ -93,6 +89,11 @@
     border-radius: 0;
     box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
     box-sizing: border-box;
+  }
+
+  & input[type="checkbox"]:focus + span::before,
+  & input[type="checkbox"]:hover + span::before {
+    border: 2px solid #bce0fa;
   }
 
   & input[type="checkbox"]:not(:checked) + span::after,
