--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -55,7 +55,7 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     padding: 0;
     margin: 0;
@@ -63,23 +63,24 @@
   }
 
   &__item {
-    flex-grow: 1;
-    width: calc(100% / 3 - 40px);
+    flex-grow: 0;
     padding: 30px;
+    margin-bottom: 30px;
+    max-width: calc(33.33% - 27px);
+    width: 100%;
 
     background-color: #f9fbfd;
-
     box-sizing: border-box;
 
-    &:not(:last-child) {
+    &:not(:nth-child(3n)) {
       margin-right: 40px;
     }
 
     @media (max-width: $desktop) {
-      width: calc(100% / 3 - 25px);
       padding: 24px 13px 24px 20px;
+      max-width: calc(33.33% - 17px);
 
-      &:not(:last-child) {
+      &:not(:nth-child(3n)) {
         margin-right: 25px;
       }
     }
@@ -88,10 +89,12 @@
       margin: 0;
       margin-bottom: 30px;
       padding: 25px 18px;
+    }
 
-      width: auto;
+    @media (max-width: 650px) {
+      max-width: 100%;
 
-      &:not(:last-child) {
+      &:not(:nth-child(3n)) {
         margin-right: 0;
       }
     }
