--- a/source/sass/blocks/nearest-cruises.scss
+++ b/source/sass/blocks/nearest-cruises.scss
@@ -55,49 +55,58 @@
   }
 
   &__item {
-    flex-grow: 1;
-    box-sizing: border-box;
+    flex-grow: 0;
     margin-bottom: 30px;
-    width: calc(25% - 30px);
-    margin-right: 30px;
+    max-width: calc(25% - 23px);
+    width: 100%;
 
-    &:nth-child(4n) {
-      margin-right: 0;
+    box-sizing: border-box;
+
+    &:not(:nth-child(4n)) {
+      margin-right: 30px;
     }
 
     @media (max-width: 1200px) {
-      width: calc(100% / 3 - 30px);
-      max-width: 239px;
-      margin-right: 30px;
+      max-width: calc(100% / 3 - 20px);
 
-      &:nth-child(3n) {
+      &:not(:nth-child(4n)) {
         margin-right: 0;
       }
 
-      &:nth-child(4n) {
+      &:not(:nth-child(3n)) {
         margin-right: 30px;
       }
     }
 
     @media (max-width: $desktop) {
-      width: calc(50% - 30px);
-      max-width: 100%;
+      max-width: calc(50% - 15px);
 
-      &:nth-child(3n) {
-        margin-right: 30px;
+      &:not(:nth-child(4n)) {
+        margin-right: 0;
       }
 
-      &:nth-child(2n) {
+      &:not(:nth-child(3n)) {
         margin-right: 0;
+      }
+
+      &:not(:nth-child(2n)) {
+        margin-right: 30px;
       }
     }
 
     @media (max-width: 520px) {
-      margin: 0;
       margin-bottom: 28px;
-      width: 100%;
+      max-width: 100%;
 
-      &:nth-child(3n) {
+      &:not(:nth-child(4n)) {
+        margin-right: 0;
+      }
+
+      &:not(:nth-child(3n)) {
+        margin-right: 0;
+      }
+
+      &:not(:nth-child(2n)) {
         margin-right: 0;
       }
     }
