--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -24,7 +24,13 @@
     }
 
     @media (max-width: $table) {
-      margin-bottom: 19px;
+      margin-bottom: 28px;
+    }
+
+    & span {
+      @media (max-width: $table) {
+        display: block;
+      }
     }
   }
 
@@ -34,7 +40,7 @@
     box-sizing: border-box;
 
     @media (max-width: $table) {
-      margin-bottom: 16px;
+      margin-bottom: 20px;
     }
   }
 
@@ -42,16 +48,24 @@
     position: relative;
     display: flex;
     align-items: center;
+
     font-size: 10px;
     line-height: 130%;
+
+    @media (max-width: $table) {
+      margin-bottom: 28px;
+      letter-spacing: 0.04em;
+      line-height: 110%;
+    }
   }
 
   & input[type="text"],
   & input[type="email"] {
-    padding: 11px 20px;
+    padding: 9px 14px;
     width: 100%;
     font-size: 14px;
     line-height: 150%;
+    letter-spacing: 0.04em;
     border: 2px solid transparent;
     border-radius: 0;
     background-color: #f9fbfd;
@@ -72,7 +86,7 @@
   & input[type="checkbox"]:not(:checked) + span,
   & input[type="checkbox"]:checked + span {
     position: relative;
-    padding-left: 1.95em;
+    padding-left: 27px;
     cursor: pointer;
   }
 
@@ -80,10 +94,10 @@
   & input[type="checkbox"]:checked + span::before {
     content: "";
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 1.5em;
-    height: 1.5em;
+    left: -2px;
+    top: -1px;
+    width: 21px;
+    height: 22px;
     border: 2px solid #101a56;
     background: $default-color;
     border-radius: 0;
@@ -100,8 +114,8 @@
   & input[type="checkbox"]:checked + span::after {
     content: " ";
     position: absolute;
-    top: 0.2em;
-    left: 0.2em;
+    top: 0.5em;
+    left: 0.3em;
 
     width: 10px;
     height: 10px;
