--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -6,7 +6,7 @@
   }
 
   @media (max-width: $table) {
-    padding: 53px 0 55px;
+    padding: 57px 0 60px;
   }
 
   &__container {
@@ -68,7 +68,7 @@
       }
 
       @media (max-width: $table) {
-        margin-bottom: 13px;
+        margin-bottom: 17px;
         max-width: 190px;
         font-size: 24px;
         line-height: 140%;
@@ -83,9 +83,11 @@
       font-size: 16px;
 
       @media (max-width: $table) {
-        margin-bottom: 38px;
+        margin-bottom: 32px;
+        padding-right: 0;
         font-size: 15px;
-        line-height: 150%;
+        line-height: 160%;
+        letter-spacing: 0.04em;
       }
     }
   }
