--- a/source/sass/blocks/advantage.scss
+++ b/source/sass/blocks/advantage.scss
@@ -12,7 +12,7 @@
   }
 
   @media (max-width: $table) {
-    padding: 55px 0 40px;
+    padding: 55px 0 38px;
     background-image: url("../img/advantage/advantage-mob.jpg");
   }
 
@@ -45,7 +45,7 @@
       }
 
       @media (max-width: $desktop) {
-        margin-bottom: 50px;
+        margin-bottom: 33px;
         max-width: 205px;
         font-size: 26px;
       }
@@ -88,7 +88,7 @@
     @media (max-width: $table) {
       margin: 0;
       margin-bottom: 30px;
-      padding: 25px 18px;
+      padding: 25px 16px 20px;
     }
 
     @media (max-width: 650px) {
@@ -99,16 +99,30 @@
       }
     }
 
+    &--pr {
+      & p {
+        @media (max-width: $table) {
+          padding-right: 26px;
+        }
+      }
+    }
+
     & h3 {
       max-width: 100%;
       margin: 0;
-      margin-bottom: 8px;
+      margin-bottom: 7px;
       font-weight: 500;
       font-size: 18px;
       line-height: 150%;
 
       @media (max-width: $desktop) {
         max-width: 200px;
+      }
+
+      & span {
+        @media (max-width: $desktop) {
+          display: block;
+        }
       }
     }
 
@@ -119,8 +133,9 @@
       line-height: 140%;
 
       @media (max-width: $table) {
-        font-size: 13px;
-        line-height: 130%;
+        font-size: 14px;
+        line-height: 143%;
+        letter-spacing: 0.027em;
       }
     }
   }
@@ -133,7 +148,7 @@
     }
 
     @media (max-width: $table) {
-      height: 22px;
+      height: 25px;
       margin-bottom: 11px;
     }
   }
