--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -7,7 +7,7 @@
   }
 
   @media (max-width: $table) {
-    padding: 40px 0;
+    padding: 40px 0 33px;
   }
 
   &__container {
@@ -41,7 +41,7 @@
     margin: 0;
 
     @media (max-width: $table) {
-      margin-top: 11px;
+      margin-top: 8px;
       margin-bottom: 8px;
     }
   }
