--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,7 +7,7 @@
   box-sizing: border-box;
 
   @media (max-width: $desktop) {
-    min-height: 405px;
+    min-height: 423px;
   }
 
   &__container {
@@ -19,7 +19,7 @@
     }
 
     @media (max-width: $table) {
-      padding-top: 96px;
+      padding-top: 100px;
     }
   }
 
@@ -38,10 +38,15 @@
     }
 
     @media (max-width: $table) {
-      margin-bottom: 5px;
-
+      margin-bottom: 10px;
       font-size: 36px;
       line-height: 125%;
+    }
+
+    & span {
+      @media (max-width: $table) {
+        display: block;
+      }
     }
   }
 
@@ -57,6 +62,7 @@
     }
 
     @media (max-width: $table) {
+      padding-right: 60px;
       font-size: 16px;
       line-height: 140%;
     }
