--- a/source/sass/blocks/logo.scss
+++ b/source/sass/blocks/logo.scss
@@ -3,6 +3,13 @@
   width: 70px;
   height: 38px;
 
+  @media (max-width: $desktop) {
+    width: 42px;
+  }
+  @media (max-width: $table) {
+    width: 42px;
+  }
+
   &--mob {
     z-index: 5;
     position: absolute;
@@ -11,10 +18,6 @@
     & .logo__pic {
       fill: $primary-color;
     }
-  }
-
-  @media (max-width: $table) {
-    width: 42px;
   }
 
   &__pic {
