--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,7 +2,7 @@
   padding: $section-pd-md 0 110px;
 
   @media (max-width: $desktop) {
-    padding: $section-pd-sm 0 87px;
+    padding: $section-pd-sm 0 91px;
   }
 
   @media (max-width: $table) {
@@ -46,10 +46,11 @@
 
     @media (max-width: $desktop) {
       width: 48%;
-      padding-top: 21px;
+      padding-top: 13px;
     }
 
     @media (max-width: $table) {
+      padding-top: 21px;
       width: 100%;
     }
   }
@@ -82,8 +83,12 @@
       opacity: 0.5;
     }
 
+    @media (max-width: $desktop) {
+      line-height: 130%;
+    }
     @media (max-width: $table) {
       margin-bottom: 20px;
+      line-height: 150%;
     }
   }
 
