--- a/source/sass/blocks/cruise.scss
+++ b/source/sass/blocks/cruise.scss
@@ -9,10 +9,6 @@
   box-sizing: border-box;
 
   @media (max-width: $desktop) {
-    height: 376px;
-  }
-
-  @media (max-width: $table) {
     min-height: 385px;
   }
 
@@ -25,7 +21,7 @@
       transition: opacity 1s;
 
       @media (max-width: $desktop) {
-        padding: 0 33px;
+        padding: 0 37px 0 33px;
       }
 
       @media (max-width: $table) {
@@ -46,6 +42,9 @@
       box-sizing: border-box;
 
       & h3 {
+        @media (max-width: $desktop) {
+          padding: 27px 35px 15px;
+        }
         @media (max-width: $table) {
           padding: 30px 26px 15px;
         }
@@ -80,11 +79,7 @@
     height: 382px;
 
     @media (max-width: $desktop) {
-      height: 376px;
-    }
-
-    @media (max-width: $table) {
-      height: 365px;
+      height: 385px;
     }
 
     & h3 {
@@ -97,6 +92,9 @@
       color: $default-color;
       box-sizing: border-box;
 
+      @media (max-width: $desktop) {
+        padding: 25px 35px;
+      }
       @media (max-width: $table) {
         padding: 16px 26px;
       }
@@ -124,7 +122,7 @@
     }
 
     @media (max-width: $desktop) {
-      margin-top: 20px;
+      margin-top: 23px;
     }
 
     @media (max-width: $table) {
