--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -20,11 +20,13 @@
     text-align: center;
 
     @media (max-width: $desktop) {
-      margin-bottom: 26px;
+      margin-bottom: 30px;
+      text-align: left;
     }
 
     @media (max-width: $table) {
       margin-bottom: 28px;
+      text-align: center;
     }
 
     & span {
@@ -52,6 +54,9 @@
     font-size: 10px;
     line-height: 130%;
 
+    @media (max-width: $desktop) {
+      line-height: 190%;
+    }
     @media (max-width: $table) {
       margin-bottom: 28px;
       letter-spacing: 0.04em;
@@ -153,6 +158,13 @@
     &:focus,
     &:hover {
       opacity: 0.5;
+    }
+
+    @media (max-width: $desktop) {
+      margin-top: 10px;
+    }
+    @media (max-width: $table) {
+      margin-top: 0;
     }
   }
 }
