--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -29,6 +29,9 @@
     justify-content: space-between;
     align-items: center;
 
+    @media (max-width: $desktop) {
+      align-items: flex-start;
+    }
     @media (max-width: $table) {
       flex-direction: column;
       align-items: flex-start;
