--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -7,6 +7,9 @@
   box-sizing: border-box;
 
   @media (max-width: $desktop) {
+    min-height: 546px;
+  }
+  @media (max-width: $table) {
     min-height: 423px;
   }
 
@@ -59,6 +62,7 @@
     @media (max-width: $desktop) {
       font-size: 18px;
       line-height: 22px;
+      letter-spacing: 0.01em;
     }
 
     @media (max-width: $table) {
