--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -1,5 +1,5 @@
 .booking {
-  padding: 48px 0 48px;
+  padding: 50px 0;
   background-image: url("../img/booking/booking.jpg");
   background-size: cover;
   background-position: center;
@@ -37,6 +37,7 @@
   }
 
   & h2 {
+    margin: 0;
     margin-bottom: 10px;
     font-size: 40px;
     line-height: 150%;
@@ -63,8 +64,8 @@
   }
 
   & p {
-    margin-right: auto;
-    margin-left: 0;
+    max-width: 343px;
+    margin: 0 auto 0 0;
     text-align: left;
 
     @media (max-width: $desktop) {
@@ -92,7 +93,7 @@
   &__info {
     width: 50%;
     padding-left: 60px;
-    padding-top: 45px;
+    margin-top: -10px;
     box-sizing: border-box;
 
     @media (max-width: $desktop) {
