--- a/source/sass/blocks/cruise.scss
+++ b/source/sass/blocks/cruise.scss
@@ -4,13 +4,9 @@
   flex-direction: column;
   justify-content: space-between;
 
-  height: 382px;
+  min-height: 385px;
 
   box-sizing: border-box;
-
-  @media (max-width: $desktop) {
-    min-height: 385px;
-  }
 
   &:focus,
   &:hover {
@@ -42,9 +38,12 @@
       box-sizing: border-box;
 
       & h3 {
+        padding: 29px 27px 15px 27px;
+
         @media (max-width: $desktop) {
           padding: 27px 35px 15px;
         }
+
         @media (max-width: $table) {
           padding: 30px 26px 15px;
         }
@@ -76,16 +75,12 @@
     justify-content: flex-end;
 
     min-height: 100%;
-    height: 382px;
-
-    @media (max-width: $desktop) {
-      height: 385px;
-    }
+    height: 385px;
 
     & h3 {
       margin: 0;
 
-      padding: 23px 30px;
+      padding: 21px 30px;
       font-weight: 500;
       font-size: 18px;
       line-height: 150%;
@@ -95,6 +90,7 @@
       @media (max-width: $desktop) {
         padding: 25px 35px;
       }
+
       @media (max-width: $table) {
         padding: 16px 26px;
       }
