--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/pixel-glass/styles.css";
+// @import "../../node_modules/pixel-glass/styles.css";
 @import "variables.scss";
 @import "fonts.scss";
 @import "base.scss";
