--- a/source/sass/blocks/cruise.scss
+++ b/source/sass/blocks/cruise.scss
@@ -11,7 +11,9 @@
   &:focus,
   &:hover {
     & .cruise__info {
-      height: auto;
+      display: flex;
+      flex-direction: column;
+      height: 100%;
       opacity: 1;
       padding: 0 25px;
       transition: opacity 1s;
@@ -100,7 +102,8 @@
   &__link {
     display: block;
 
-    margin-top: 23px;
+    margin-top: auto;
+    margin-bottom: 33px;
     padding: 10px;
     font-weight: 600;
     font-size: 14px;
