--- a/source/sass/blocks/booking.scss
+++ b/source/sass/blocks/booking.scss
@@ -39,6 +39,7 @@
   & h2 {
     margin: 0;
     margin-bottom: 10px;
+    font-family: $mainFontBold;
     font-size: 40px;
     line-height: 150%;
     font-weight: bold;
