--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -57,6 +57,7 @@
 
   & p {
     margin: 0 0 29px 0;
+    font-family: $mainFont-2;
     font-size: 18px;
     line-height: 150%;
     font-weight: 500;
