--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -56,6 +56,7 @@
     & h2 {
       margin: 0;
       margin-bottom: 26px;
+      font-family: $mainFontBold;
       font-size: 28px;
       line-height: 150%;
       font-weight: 600;
