--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -13,6 +13,7 @@
 
   &__title {
     margin-bottom: 30px;
+    font-family: $mainFont-2;
     font-weight: 500;
     font-size: 18px;
     line-height: 140%;
