--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -31,6 +31,7 @@
     margin: 0 0 12px 0;
 
     margin-bottom: 12px;
+    font-family: $mainFontBold;
     font-size: 54px;
     line-height: 66px;
     font-weight: bold;
